# rust_todo_list

./: .gitignore  Cargo.toml  README.md  config.json
data/: config.json
src/: config.rs  config_pointer.json  main.rs  menu.rs  resolver.rs  tasks.rs  todo.rs  utils.rs
src/actions/: menu.rs  mod.rs  onboard.rs
src/menu/: add_task.rs  config.rs  delete_task.rs  get_task.rs  mod.rs  update_task.rs
tasks/: 0.json  1.json
